<resources>
    <string name="app_name">ZinZali</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="shr_app_name">Zinzali</string>
    <string name="shr_hint_username">Email</string>
    <string name="shr_hint_password">Contraseña</string>
    <string name="shr_button_next">next</string>
    <string name="shr_button_cancel">cancel</string>
    <string name="shr_search_title">buscar</string>
    <string name="shr_filter_title">filtro</string>
    <string name="shr_product_title">product</string>
    <string name="shr_product_description">primer prodcut</string>
    <string name="loader_home">Cargando...</string>
    <string name="title_home">Inicio</string>
    <string name="title_account">Cuenta</string>
    <string name="title_cart">Carrito</string>
    <string name="products">productos</string>
    <string name="categorias">Categorias</string>
    <string name="bestSellers">Mas Vendidos</string>
    <string name="loader_welcome">Bienvenido...</string>
    <string name="offers">Ofertas</string>
    <string name="about">Nosotros</string>
    <string name="register_accont">Continuar</string>
    <string name="register">crear cuenta</string>
    <string name="account_hint_username">Email</string>
    <string name="account_hint_password">Contraseña</string>
    <string name="account_helper_password">Minimo 8 caracteres</string>
    <string name="account_hint_lastname">Apellidos</string>
    <string name="account_hint_firstname">Nombres</string>
    <string name="account_hint_phone">Telefono (+591)</string>
    <string name="button_cancel">Cancelar</string>
    <string name="logo">Logo App</string>
    <string name="verifyRegister">Verificando datos de registro</string>
    <string name="register_verification_code">Verificar codigo</string>
    <string name="account_hint_verification">Código de verificación</string>
    <string name="register_verification_send">volver a enviar</string>
    <string name="register_login">Verificando...</string>
    <string name="addresses">Ubicaciones</string>
    <string name="recordDelivery">Historial Pedidos</string>
    <string name="trackMyOrder">Seguimiento de pedidos</string>
    <string name="updateProfile">Editar Perfil</string>
    <string name="statusPhoneVerified">Telefono Verificado</string>
    <string name="statusPhoneInvalid">Por favor verifique el número de telefono</string>
    <string name="exit">Cerrar Sesión</string>
    <string name="manage_address">Administrar direcciones</string>
    <string name="no_offers_found">Sin Ofertas</string>
    <string name="select_property">Seleccione</string>
    <string name="add_cart">añadir al carrito</string>
    <string name="product_sale">Este producto se ha agotado</string>
    <string name="orderBy">Ordenar por</string>
    <string name="shopping_cart">Carrito de Compras</string>
    <string name="checkout">Realizar pedido</string>
    <string name="cart_empty">Carrito Vacio</string>
    <string name="address">Seleccione una ubicacion</string>
    <string name="address_add">Añadir una direccion</string>
    <string name="user_history">Mis Pedidos</string>
    <string name="about_us">¿Quiénes somos?</string>
    <string name="about_us_resp">ZinZali es una tienda online con un catálogo amplio de productos de las diferentes marcas que son para todos los gustos, solo descargando nuestra aplicación podrás tener la comodidad de hacer tus compras desde tu hogar, nosotros te llevamos lo que necesitas cuidando tu bioseguridad y la de tu familia.</string>
    <string name="about_us_resp_2">Zinzali cuenta con una experiencia en ventas tradicionales y hoy en día gracias a las nuevas tecnologías damos el paso a la innovación dando la seguridad de nuestra calidad de servicio ya que el cliente es lo primero.</string>
    <string name="about_us_resp_3">Por que el cliente es lo primero, ZinZali contará con ofertas y promociones en los diferentes productos, no te pierdas uno solo que sabemos son de tu interés.</string>
    <string name="about_us_resp_4">Tienes planes para el fin de semana en familia o amigos, ZinZali es la aplicación correcta para armar tu actividad, encuentra una variedad de productos adecuados para cada actividad que tengas en mente y con precios realmente accesibles.</string>
    <string name="about_us_resp_5">El método de pago que maneja ZinZali es contra entrega, pide ahora paga en la puerta de tu hogar.</string>
    <string name="about_us_resp_6">Visita todas las categorías y arma tu carrito ideal para tu hogar, ZinZali te lo lleva hasta la puerta de tu hogar con precios realmente accesibles, disfruta, arma tu convivencia, se parte de esta nueva experiencia en Tiendas Online.</string>
    <string name="help_improve">Ayudanos a mejorar</string>
    <string name="contact_name">Nombres</string>
    <string name="contact_email">Correo electrónico</string>
    <string name="contact_phone">Telefono</string>
    <string name="contact_message">Mensaje</string>
    <string name="notify">Notificaciones</string>

</resources>