<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.about.view.AboutFragment">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:src="@drawable/ic_logo"
            android:layout_marginTop="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:fontFamily="@font/montserrat_bold"
            android:gravity="center"
            android:text="@string/about_us"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView2" />

        <TextView
            android:id="@+id/textView1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/about_us_resp"
            app:layout_constraintEnd_toEndOf="parent"
            android:fontFamily="@font/montserrat_light"
            android:textSize="15sp"
            android:gravity="center"
            android:layout_marginTop="20dp"
            android:paddingHorizontal="10dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView7" />
        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/about_us_resp_2"
            app:layout_constraintEnd_toEndOf="parent"
            android:fontFamily="@font/montserrat_light"
            android:textSize="15sp"
            android:gravity="center"
            android:layout_marginTop="20dp"
            android:paddingHorizontal="10dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView1" />
        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/about_us_resp_3"
            app:layout_constraintEnd_toEndOf="parent"
            android:fontFamily="@font/montserrat_light"
            android:textSize="15sp"
            android:gravity="center"
            android:layout_marginTop="20dp"
            android:paddingHorizontal="10dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView2" />
        <TextView
            android:id="@id/textView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/about_us_resp_4"
            app:layout_constraintEnd_toEndOf="parent"
            android:fontFamily="@font/montserrat_light"
            android:textSize="15sp"
            android:gravity="center"
            android:layout_marginTop="20dp"
            android:paddingHorizontal="10dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView3" />
        <TextView
            android:id="@+id/textView5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/about_us_resp_5"
            app:layout_constraintEnd_toEndOf="parent"
            android:fontFamily="@font/montserrat_light"
            android:textSize="15sp"
            android:gravity="center"
            android:layout_marginTop="20dp"
            android:paddingHorizontal="10dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView4" />
        <TextView
            android:id="@+id/textView6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/about_us_resp_6"
            app:layout_constraintEnd_toEndOf="parent"
            android:fontFamily="@font/montserrat_light"
            android:textSize="15sp"
            android:gravity="center"
            android:layout_marginTop="20dp"
            android:paddingHorizontal="10dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView5"
            android:layout_marginBottom="30dp"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
