<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.register.view.AccountRegisterFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clipChildren="false"
            android:clipToPadding="false"
            android:orientation="vertical"
            android:padding="24dp"
            android:paddingTop="16dp">

            <ImageView
                android:layout_width="84dp"
                android:layout_height="84dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="48dp"
                android:layout_marginBottom="16dp"
                android:contentDescription="@string/logo"
                app:srcCompat="@drawable/ic_logo" />



            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.Shrine.TextInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/account_hint_firstname"
                app:startIconDrawable="@drawable/ic_baseline_person_outline_24">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editTextFirsName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:maxLines="1" />
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.Shrine.TextInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/account_hint_lastname"
                app:startIconDrawable="@drawable/ic_baseline_person_outline_24">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editTextLastName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:maxLines="1" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.Shrine.TextInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/account_hint_phone"
                app:endIconDrawable="@drawable/ic_baseline_phone_android_24"
                app:helperText="Ej. 7XXXXXXX"
                app:counterMaxLength="8"
                app:counterEnabled="true"
                app:helperTextEnabled="true"
                app:errorEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editTextPhone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="phone"
                    android:maxLength="8"
                    android:drawableStart="@drawable/ic_bolivia_icon"
                    android:drawablePadding="3dp"
                    android:maxLines="1" />
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.Shrine.TextInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/account_hint_username"
                app:startIconDrawable="@drawable/ic_baseline_email_24">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editTextEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"
                    android:maxLines="1" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/password_text_input"
                style="@style/Widget.Shrine.TextInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/account_hint_password"
                app:counterEnabled="true"
                app:endIconMode="password_toggle"
                app:startIconDrawable="@drawable/ic_baseline_lock_24"
                app:helperText="@string/account_helper_password"
                >

                <com.google.android.material.textfield.TextInputEditText

                    android:id="@+id/editTextPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword" />
            </com.google.android.material.textfield.TextInputLayout>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <LinearLayout
                    android:visibility="visible"
                    android:id="@+id/layoutView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="end">
                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/btnCancel"
                        style="@style/Widget.Shrine.Button.TextButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="12dp"
                        android:layout_marginRight="12dp"
                        android:layout_toStartOf="@id/btnNext"
                        android:layout_toLeftOf="@id/btnNext"
                        android:text="@string/button_cancel" />
                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/btnNext"
                        style="@style/Widget.Shrine.Button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_alignParentRight="true"
                        android:text="@string/register_accont" />
                </LinearLayout>
                <LinearLayout
                    android:visibility="gone"
                    android:id="@+id/layoutLoader"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:gravity="center">
                    <ProgressBar
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:indeterminateTint="@color/colorPrimaryDark"
                        android:indeterminate="true">
                    </ProgressBar>
                    <TextView
                        android:layout_width="190dp"
                        android:textColor="@color/colorAccent"
                        android:layout_height="wrap_content"
                        android:text="@string/verifyRegister"/>
                </LinearLayout>



            </RelativeLayout>
        </LinearLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>