<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.register.view.VerificationPhoneFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clipChildren="false"
            android:clipToPadding="false"
            android:orientation="vertical"
            android:padding="24dp"
            android:paddingTop="16dp">

            <ImageView
                android:layout_width="64dp"
                android:layout_height="64dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="48dp"
                android:layout_marginBottom="16dp"
                android:contentDescription="@string/logo"
                app:srcCompat="@drawable/ic_logo" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="60dp"
                android:text="@string/shr_app_name"
                android:textAllCaps="true"
                android:textSize="16sp" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_gravity="center"
                android:id="@+id/code_text_input"
                style="@style/Widget.Shrine.TextInputLayout"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:hint="@string/account_hint_verification"
                app:counterEnabled="true"
                app:counterMaxLength="6"
                app:helperText="(+591) 7XXXXXXX"
                app:helperTextEnabled="true"
                app:startIconDrawable="@drawable/ic_baseline_phonelink_lock_24"
                >

                <com.google.android.material.textfield.TextInputEditText

                    android:id="@+id/editTextCodeVerification"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number" />
            </com.google.android.material.textfield.TextInputLayout>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:visibility="visible"
                    android:id="@+id/layoutView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:gravity="center">
                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/btnBack"
                        style="@style/Widget.Shrine.Button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="5dp"
                        app:backgroundTint="@color/colorPrimary"
                        android:textColor="@color/colorPrimaryDark"
                        android:layout_alignParentEnd="true"
                        android:layout_alignParentRight="true"
                        android:text="@string/register_verification_send" />
                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/btnNext"
                        style="@style/Widget.Shrine.Button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_alignParentRight="true"
                        android:text="@string/register_verification_code" />
                </LinearLayout>
                <LinearLayout
                    android:visibility="gone"
                    android:id="@+id/layoutLoader"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:gravity="center">
                    <ProgressBar
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:indeterminateTint="@color/colorPrimaryDark"
                        android:indeterminate="true">
                    </ProgressBar>
                    <TextView
                        android:layout_width="190dp"
                        android:textColor="@color/colorAccent"
                        android:layout_height="wrap_content"
                        android:text="@string/verifyRegister"/>
                </LinearLayout>



            </RelativeLayout>
        </LinearLayout>

    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>